--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,19 @@ services:
     ports:
       - '27017:27017'
 
+  app:
+    build:
+      context: ./app  # Ruta hacia el backend (FastAPI)
+    container_name: fastapi_app
+    command: uvicorn main:app --host 0.0.0.0 --port 8000
+    env_file:
+      - ./.env
+    environment:
+      DATABASE_URL: ${DATABASE_URL}  # URL para conectar a Mongo
+    depends_on:
+      - mongo
+    ports:
+      - '8000:8000'  # Expone el servicio FastAPI en el puerto 8000
+
 volumes:
   mongo:
