--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mongo:latest
     container_name: mongo
     env_file:
-      - ./.env
+      - .env
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
@@ -18,9 +18,9 @@ services:
     build:
       context: ./app  # Ruta hacia el backend (FastAPI)
     container_name: fastapi_app
-    command: uvicorn main:app --host 0.0.0.0 --port 8000
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
     env_file:
-      - ./.env
+      - .env
     environment:
       DATABASE_URL: ${DATABASE_URL}  # URL para conectar a Mongo
     depends_on:
